add reports to professors
asistance by semester and employment type
